--- a/notebooks/mnist_dataset.ipynb
+++ b/notebooks/mnist_dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "outputs": [
     {
      "data": {
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "n_samples = len(digits.images)\n",
@@ -68,10 +68,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "outputs": [],
    "source": [
-    "clf = SVC(gamma=0.001)\n",
+    "clf = SVC(gamma=0.001, probability=True)\n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(data, digits.target, test_size=0.4, shuffle=False)"
    ],
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "# Learn the digits on the train subset\n",
@@ -102,13 +102,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "outputs": [
     {
      "data": {
       "text/plain": "0.9652294853963839"
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "outputs": [
     {
      "data": {
@@ -152,13 +152,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "outputs": [
     {
      "data": {
       "text/plain": "['mnist_svc.joblib']"
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,64 +167,6 @@
     "# Save model\n",
     "joblib.dump(clf, 'mnist_svc.joblib')"
    ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "(719, 64)"
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X_test.shape\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "array([ 0.,  0.,  6., 16., 13., 12., 14.,  1.,  0.,  0., 14.,  4.,  4.,\n       15.,  4.,  0.,  0.,  1.,  7.,  0., 10.,  7.,  0.,  0.,  0.,  0.,\n        0.,  2., 13.,  1.,  0.,  0.,  0.,  2.,  9., 14., 16., 12.,  0.,\n        0.,  0.,  4.,  6., 15.,  2.,  4.,  1.,  0.,  0.,  0.,  6.,  7.,\n        0.,  0.,  0.,  0.,  0.,  0., 10.,  4.,  0.,  0.,  0.,  0.])"
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X_test[1]\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
